[package]
name = "cron_tab"
version = "0.1.0"
authors = ["Tran Tuyen <vat1906@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
cron = "0.6.1"
thiserror = "1.0"
crossbeam-channel = "0.4.2"