[package]
name = "cron_tab"
version = "0.1.4"
authors = ["Tran Tuyen <vat1906@gmail.com>"]
edition = "2018"
description = "A cron job library for Rust."
readme = "README.md"
homepage = "https://github.com/tuyentv96/rust-crontab"

license = "MIT"
documentation = "https://docs.rs/cron_tab"
repository = "https://github.com/tuyentv96/rust-crontab"
keywords = ["time", "cron", "scheduler", "crontab", "delay"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
cron = "0.11"
thiserror = "1.0"
crossbeam-channel = "0.5"
