[package]
name = "cron_tab"
version = "0.2.4"
authors = ["Tran Tuyen <vat1906@gmail.com>"]
edition = "2018"
description = "A cron job library for Rust."
readme = "README.md"
homepage = "https://github.com/tuyentv96/rust-crontab"

license = "MIT"
documentation = "https://docs.rs/cron_tab"
repository = "https://github.com/tuyentv96/rust-crontab"
keywords = ["time", "cron", "scheduler", "crontab", "delay"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]
sync = []
async = ["dep:tokio", "dep:futures"]
all = ["async", "sync"]

[dependencies]
chrono = "0.4"
cron = "0.12"
thiserror = "1.0"
crossbeam-channel = "0.5"
tokio = { version = "1.25", optional = true, features = ["sync", "rt-multi-thread", "time", "macros"] }
futures = { version = "0.3.26", optional = true }

[[example]]
name = "async_simple"
path = "examples/async_simple.rs"
required-features = ["async"]
